--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -5,9 +5,9 @@ repo_name: oguzhan-yilmaz/karpenter-eks-vpc-secondary-cidr
 nav:
   - Home: README.md
   - "EKS Cluster w/ Secondary CIDR": eks-custom-networking-vpc-secondary-cidr.md
-  - "Karpenter Configuration": karpenter.md
-  - "TroubleShooting": troubleshooting.md
-  - "Ec2 Instance Selector": ec2-instance-selector.md
+  - "Karpenter Configuration w/ Secondary CIDR": karpenter.md
+  - "Troubleshooting": troubleshooting.md
+  - "Ec2 Instance Selector tool": ec2-instance-selector.md
   - "Create Load on the Cluster": create-load.md
   
 theme:
