--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -26,6 +26,8 @@ theme:
       toggle:
         icon: material/brightness-4
         name: Switch to light mode
+  
+
   font:
     text: Roboto
     code: Roboto Mono
@@ -38,30 +40,18 @@ theme:
     - search.share
     - content.code.copy
     - content.tabs.link
-    
-
   icon:
     repo: fontawesome/brands/github
 
-  # palette:
-  #   # Palette toggle for light mode
-  #   - scheme: slate
-  #     media: "(prefers-color-scheme: dark)"
-  #     primary: black
-  #     accent: white
-  #     toggle:
-  #       icon: material/weather-sunny
-  #       name: Switch to dark mode
-
-  #   # Palette toggle for dark mode
-  #   - scheme: default
-  #     media: "(prefers-color-scheme: light)"
-  #     primary: black
-  #     accent: white
-  #     toggle:
-  #       icon: material/weather-night
-  #       name: Switch to light mode
-
+extra:
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/oguzhan-yilmaz
+    - icon: fontawesome/brands/linkedin 
+      link: https://www.linkedin.com/in/oguzhan-y/
+    - icon: fontawesome/brands/twitter 
+      link: https://twitter.com/oguzhan_y_
+      
 markdown_extensions:
   - tables
   - pymdownx.critic
