update as we got the v1alpha version

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -4,11 +4,17 @@ repo_name: oguzhan-yilmaz/karpenter-eks-vpc-secondary-cidr
 
 nav:
   - Home: README.md
-  - "EKS Cluster w/ Secondary CIDR": eks-custom-networking-vpc-secondary-cidr.md
-  - "Karpenter Configuration w/ Secondary CIDR": karpenter.md
-  - "Troubleshooting": troubleshooting.md
-  - "Ec2 Instance Selector tool": ec2-instance-selector.md
-  - "Create Load on the Cluster": create-load.md
+  - "Karpenter v1beta(v0.32+)": karpenter-v1beta-configuration.md
+  - "Migrate from AWSNodeTemplate to NodeClass (a.k.a. v1beta1 Migration)": migrate-from-awsnodetemplate-to-nodeclass.md
+  - "Multi NodeClass Strategy": multi-nodeclass-strategy.md
+  - "Full Demo":
+    - "0. About the Demo": eksdemo-secondary-cidr-and-cni-custom-netwoking/README.md
+    - "1. Create VPC with Secondary CIDR and Subnets": eksdemo-secondary-cidr-and-cni-custom-netwoking/1-vpc-secondary-cidr-and-subnets.md
+    - "2. AWS VPC CNI & ENIConfig configuration for Custom Networking": eksdemo-secondary-cidr-and-cni-custom-netwoking/2-aws-vpc-cni-configuration.md
+    - "3. Karpenter v1alpha Configuration": eksdemo-secondary-cidr-and-cni-custom-netwoking/3-karpenter-v1alpha-configuration.md
+    - "Demo Troubleshooting": eksdemo-secondary-cidr-and-cni-custom-netwoking/troubleshooting.md
+    - "Create Load on the Cluster": eksdemo-secondary-cidr-and-cni-custom-netwoking/create-load-on-the-cluster.md
+  - "ec2-instance-selector CLI tool": ec2-instance-selector.md
   
 theme:
   name: material
@@ -51,7 +57,7 @@ extra:
       link: https://www.linkedin.com/in/oguzhan-y/
     - icon: fontawesome/brands/twitter 
       link: https://twitter.com/oguzhan_y_
-      
+
 markdown_extensions:
   - tables
   - pymdownx.critic
